--- a/lstm.ipynb
+++ b/lstm.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,57 +99,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('./tasks/task_20.txt') as f:\n",
-    "    all_stories = get_stories(f)\n",
-    "    \n",
-    "train_stories, test_stories = train_test_split(all_stories, test_size=0.2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([['Yann', 'is', 'tired', '.'],\n",
-       "  ['Antoine', 'is', 'hungry', '.'],\n",
-       "  ['Jason', 'is', 'thirsty', '.'],\n",
-       "  ['Jason', 'went', 'to', 'the', 'kitchen', '.'],\n",
-       "  ['Jason', 'got', 'the', 'milk', '.'],\n",
-       "  ['Sumit', 'is', 'bored', '.'],\n",
-       "  ['Antoine', 'went', 'to', 'the', 'kitchen', '.']],\n",
-       " ['Why', 'did', 'Antoine', 'go', 'to', 'the', 'kitchen', '?'],\n",
-       " 'hungry')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_stories[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 194,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def padding_tensor(sequences):\n",
+    "def padding_tensor(sequences, max_len):\n",
     "    \"\"\"\n",
     "    :param sequences: list of tensors\n",
     "    :return:\n",
     "    \"\"\"\n",
     "    num = len(sequences)\n",
-    "    max_len = max([len(s) for s in sequences])\n",
+    "#     max_len = max([len(s) for s in sequences])\n",
     "    out_dims = (num, max_len)\n",
     "    out_tensor = np.zeros((num, max_len))\n",
     "    for i, tensor in enumerate(sequences):\n",
@@ -160,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,48 +143,56 @@
     "        X.append(x)\n",
     "        Xq.append(xq)\n",
     "        Y.append(y)\n",
-    "    return (padding_tensor(X),\n",
-    "            padding_tensor(Xq), np.array(Y))"
+    "    return (padding_tensor(X, story_maxlen),\n",
+    "            padding_tensor(Xq, query_maxlen), np.array(Y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vocab = set()\n",
-    "for story, q, answer in train_stories + test_stories:\n",
-    "    vocab |= set(story + q + [answer])\n",
+    "def prepare_data(task):\n",
+    "    with open(f'./tasks/task_{task}.txt') as f:\n",
+    "        all_stories = get_stories(f)\n",
+    "\n",
+    "    train_stories, test_stories = train_test_split(all_stories, test_size=0.2)\n",
+    "\n",
+    "    vocab = set()\n",
+    "    for story, q, answer in train_stories + test_stories:\n",
+    "        vocab |= set(story + q + [answer])\n",
+    "\n",
+    "    vocab = sorted(vocab)\n",
+    "    vocab_size = len(vocab) + 1\n",
+    "    story_maxlen = max(map(len, (x for x, _, _ in train_stories + test_stories)))\n",
+    "    query_maxlen = max(map(len, (x for _, x, _ in train_stories + test_stories)))\n",
+    "    vocab = list(vocab)\n",
+    "    vocab = ['<pad>'] + vocab\n",
+    "    word_idx = dict((c, i) for i, c in enumerate(vocab))\n",
+    "    idx_word = dict((i, c) for i,c in enumerate(vocab))\n",
+    "\n",
+    "    train = vectorize_stories(train_stories,\n",
+    "                               word_idx,\n",
+    "                               story_maxlen,\n",
+    "                               query_maxlen)\n",
+    "\n",
+    "    test = vectorize_stories(test_stories,\n",
+    "                            word_idx,\n",
+    "                            story_maxlen,\n",
+    "                            query_maxlen)\n",
     "    \n",
-    "vocab = sorted(vocab)\n",
-    "vocab_size = len(vocab) + 1\n",
-    "story_maxlen = max(map(len, (x for x, _, _ in train_stories + test_stories)))\n",
-    "query_maxlen = max(map(len, (x for _, x, _ in train_stories + test_stories)))\n",
-    "vocab = list(vocab)\n",
-    "vocab = ['<pad>'] + vocab\n",
-    "word_idx = dict((c, i) for i, c in enumerate(vocab))\n",
-    "idx_word = dict((i, c) for i,c in enumerate(vocab))\n",
-    "\n",
-    "inputs_train, queries_train, answers_train = vectorize_stories(train_stories,\n",
-    "                                                               word_idx,\n",
-    "                                                               story_maxlen,\n",
-    "                                                               query_maxlen)\n",
-    "\n",
-    "inputs_test, queries_test, answers_test = vectorize_stories(test_stories,\n",
-    "                                                            word_idx,\n",
-    "                                                            story_maxlen,\n",
-    "                                                            query_maxlen)"
+    "    return train, test, vocab, word_idx, query_maxlen, story_maxlen"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "class LSTM_no_attention(nn.Module):\n",
-    "    def __init__(self, vocab_size, story_embed_size, query_embed_size, story_hidden_dim, query_hidden_dim, dropout=0.2):\n",
+    "    def __init__(self, vocab_size, story_embed_size, query_embed_size, story_hidden_dim, query_hidden_dim, query_maxlen, story_maxlen, dropout=0.2):\n",
     "        super().__init__()\n",
     "        self.vocab_size = vocab_size\n",
     "        self.story_embed_size = story_embed_size\n",
@@ -270,41 +238,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.7/site-packages/ipykernel_launcher.py:29: UserWarning: Implicit dimension choice for log_softmax has been deprecated. Change the call to include dim=X as an argument.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([9600, 34])"
-      ]
-     },
-     "execution_count": 199,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mem = LSTM_no_attention(len(vocab), 10, 2, 5, 2)\n",
-    "x=mem(torch.Tensor(inputs_train).long(), torch.Tensor(queries_train).long())\n",
-    "x.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
     "torch.autograd.set_detect_anomaly(False)\n",
-    "def train(model, optimizer, epochs, story, query, answers):\n",
+    "def train_model(model, optimizer, epochs, story, query, answers, test, word_idx):\n",
+    "    test_accuracy = []\n",
     "    pad = word_idx['<pad>']\n",
     "    for epoch in range(epochs):\n",
     "        #scheduler.step()\n",
@@ -315,27 +255,19 @@
     "        loss.backward(retain_graph=True)\n",
     "        optimizer.step()\n",
     "        if epoch%5==0:\n",
-    "            eval(model)\n",
-    "        #print(f\"Epoch {epoch+1}: {loss.item()/story.shape[0]}\")\n",
-    "     "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 201,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def eval(model):\n",
-    "    outputs = model(torch.Tensor(inputs_test).long(), torch.Tensor(queries_test).long())\n",
-    "    ans = np.argmax(answers_test, axis=1)\n",
+    "            test_accuracy.append(eval(model, test))\n",
+    "    return max(test_accuracy)\n",
+    "     \n",
+    "def eval(model, test):\n",
+    "    outputs = model(torch.Tensor(test[0]).long(), torch.Tensor(test[1]).long())\n",
+    "    ans = np.argmax(test[2], axis=1)\n",
     "    predicted_ans = np.argmax(outputs.detach().numpy(), axis=1)\n",
-    "    print(f\"test accuracy: {np.mean(predicted_ans == ans)}\")"
+    "    return np.mean(predicted_ans == ans)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -349,71 +281,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test accuracy: 0.2575\n",
-      "test accuracy: 0.31166666666666665\n",
-      "test accuracy: 0.59125\n",
-      "test accuracy: 0.68875\n",
-      "test accuracy: 0.7545833333333334\n",
-      "test accuracy: 0.765\n",
-      "test accuracy: 0.78625\n",
-      "test accuracy: 0.80875\n",
-      "test accuracy: 0.8295833333333333\n",
-      "test accuracy: 0.8491666666666666\n",
-      "test accuracy: 0.8616666666666667\n",
-      "test accuracy: 0.86875\n",
-      "test accuracy: 0.87125\n",
-      "test accuracy: 0.8866666666666667\n",
-      "test accuracy: 0.8920833333333333\n",
-      "test accuracy: 0.8979166666666667\n"
+      "Task 1: 39.7%\n",
+      "Task 2: 43.5%\n",
+      "Task 3: 48.4%\n",
+      "Task 4: 61.5%\n",
+      "Task 5: 36.6%\n",
+      "Task 6: 51.9%\n",
+      "Task 7: 58.9%\n",
+      "Task 8: 60.5%\n",
+      "Task 9: 62.5%\n",
+      "Task 10: 82.7%\n",
+      "Task 11: 73.8%\n",
+      "Task 12: 54.1%\n",
+      "Task 13: 78.3%\n",
+      "Task 14: 32.6%\n",
+      "Task 15: 48.0%\n",
+      "Task 16: 37.5%\n",
+      "Task 17: 52.06%\n",
+      "Task 18: 89.15%\n",
+      "Task 19: 16.5%\n"
      ]
     }
    ],
    "source": [
-    "mem = LSTM_no_attention(len(vocab), 20, 2, 5, 2)\n",
-    "optimizer = torch.optim.Adam(mem.parameters(), 0.1)\n",
-    "train(mem, optimizer, 80, torch.Tensor(inputs_train).long(), torch.Tensor(queries_train).long(), torch.Tensor(np.argmax(answers_train, axis=1)).long())\n",
+    "for task in range(1,21):\n",
+    "    train, test, vocab, word_idx, query_maxlen, story_maxlen = prepare_data(task)\n",
+    "    inputs_train = torch.Tensor(train[0]).long()\n",
+    "    queries_train = torch.Tensor(train[1]).long()\n",
+    "    answers_train = torch.Tensor(np.argmax(train[2], axis=1)).long()\n",
+    "\n",
+    "    mem = LSTM_no_attention(len(vocab), 20, 10, 5, 2, query_maxlen, story_maxlen)\n",
+    "    optimizer = torch.optim.Adam(mem.parameters(), 0.1)\n",
+    "    test_accuracy = train_model(mem, optimizer, 100, inputs_train, queries_train, answers_train, test, word_idx)\n",
+    "    print(f\"Task {task}: {np.round(test_accuracy*100,2)}%\")\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4000,)"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.argmax(answers_train, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.Tensor(queries_train).shape\n",
-    "len(vocab)"
    ]
   }
  ],
