adding lstm with attention

--- a/tasks/lstm_attention.ipynb
+++ b/tasks/lstm_attention.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,34 +109,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('./task_2.txt') as f:\n",
-    "    all_stories = get_stories(f)\n",
-    "    \n",
-    "train_stories, test_stories = train_test_split(all_stories, test_size=0.2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([['Daniel', 'and', 'Sandra', 'went', 'to', 'the', 'office'],\n",
-       "  ['Sandra', 'and', 'Daniel', 'moved', 'to', 'the', 'bathroom'],\n",
-       "  ['Mary', 'and', 'John', 'travelled', 'to', 'the', 'hallway'],\n",
-       "  ['Daniel', 'and', 'John', 'journeyed', 'to', 'the', 'office']],\n",
-       " ['Where', 'is', 'John'],\n",
-       " 'office',\n",
-       " [3])"
+       "([['John', 'moved', 'to', 'the', 'garden'],\n",
+       "  ['John', 'moved', 'to', 'the', 'bedroom'],\n",
+       "  ['Mary', 'moved', 'to', 'the', 'garden'],\n",
+       "  ['Daniel', 'went', 'to', 'the', 'office']],\n",
+       " ['Where', 'is', 'Mary'],\n",
+       " 'garden',\n",
+       " [2])"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,17 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max_story_count = max([len(story[0]) for story in all_stories])\n",
-    "max_story_len = max([max([len(i) for i in story[0]]) for story in all_stories])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,40 +209,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "flatten = lambda data: reduce(lambda x, y: x + y, data)\n",
-    "vocab = set()\n",
-    "for story, q, answer, s in train_stories + test_stories:\n",
-    "    vocab |= set(flatten(story) + q + [answer])\n",
-    "    \n",
-    "vocab = sorted(vocab)\n",
-    "vocab_size = len(vocab) + 1\n",
-    "#story_maxlen = max(map(len, (x for x, _, _ in train_stories + test_stories)))\n",
-    "vocab = list(vocab)\n",
-    "query_maxlen = max(map(len, (x for _, x, _,_ in train_stories + test_stories)))\n",
-    "vocab = ['<pad>'] + vocab\n",
-    "word_idx = dict((c, i) for i, c in enumerate(vocab))\n",
-    "idx_word = dict((i, c) for i,c in enumerate(vocab))\n",
+    "def preprocess_data(task):\n",
+    "    with open(f'./task_{task}.txt') as f:\n",
+    "        all_stories = get_stories(f)\n",
     "\n",
-    "inputs_train, queries_train, answers_train, supporting_train = vectorize_stories(train_stories,\n",
-    "                                                               word_idx,\n",
-    "                                                               query_maxlen, max_story_count, max_story_len)\n",
-    "inputs_test, queries_test, answers_test, supporting_test = vectorize_stories(test_stories,\n",
-    "                                                               word_idx,\n",
-    "                                                               query_maxlen, max_story_count, max_story_len)"
+    "    train_stories, test_stories = train_test_split(all_stories, test_size=0.2)\n",
+    "    max_story_count = max([len(story[0]) for story in all_stories])\n",
+    "    max_story_len = max([max([len(i) for i in story[0]]) for story in all_stories])\n",
+    "\n",
+    "    flatten = lambda data: reduce(lambda x, y: x + y, data)\n",
+    "    vocab = set()\n",
+    "    for story, q, answer, s in train_stories + test_stories:\n",
+    "        vocab |= set(flatten(story) + q + [answer])\n",
+    "\n",
+    "    vocab = sorted(vocab)\n",
+    "    vocab_size = len(vocab) + 1\n",
+    "    #story_maxlen = max(map(len, (x for x, _, _ in train_stories + test_stories)))\n",
+    "    vocab = list(vocab)\n",
+    "    query_maxlen = max(map(len, (x for _, x, _,_ in train_stories + test_stories)))\n",
+    "    vocab = ['<pad>'] + vocab\n",
+    "    word_idx = dict((c, i) for i, c in enumerate(vocab))\n",
+    "    idx_word = dict((i, c) for i,c in enumerate(vocab))\n",
+    "\n",
+    "    train = vectorize_stories(train_stories,\n",
+    "                               word_idx,\n",
+    "                               query_maxlen, max_story_count, max_story_len)\n",
+    "    test = vectorize_stories(test_stories,\n",
+    "                               word_idx,\n",
+    "                               query_maxlen, max_story_count, max_story_len)\n",
+    "    return train, test, vocab, max_story_count, max_story_len, query_maxlen, word_idx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "class LSTM_with_attention(nn.Module):\n",
-    "    def __init__(self, vocab_size, story_embed_size, query_embed_size, story_hidden_dim, query_hidden_dim):\n",
+    "    def __init__(self, vocab_size, story_embed_size, query_embed_size, story_hidden_dim, query_hidden_dim, max_story_count, query_maxlen, max_story_len):\n",
     "        super().__init__()\n",
     "        self.vocab_size = vocab_size\n",
     "        self.story_embed_size = story_embed_size \n",
@@ -272,7 +259,7 @@
     "        self.query_hidden_dim = query_hidden_dim\n",
     "        self.story_embeddings = nn.Embedding(vocab_size, story_embed_size)\n",
     "        self.query_embeddings = nn.Embedding(vocab_size, query_embed_size)\n",
-    "        self.story_lstm = nn.LSTM(story_embed_size*6, story_hidden_dim)\n",
+    "        self.story_lstm = nn.LSTM(story_embed_size*max_story_len, story_hidden_dim)\n",
     "        self.query_lstm = nn.LSTM(query_embed_size, query_hidden_dim)\n",
     "        self.story_hidden = self.init_story_hidden(max_story_count)  \n",
     "        self.query_hidden = self.init_query_hidden(query_maxlen) \n",
@@ -322,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -341,27 +328,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "torch.autograd.set_detect_anomaly(False)\n",
-    "def train(model, optimizer, epochs, story, query, supporting, answers):\n",
+    "def train_model(model, optimizer, epochs, story, query, supporting, answers, test):\n",
     "    pad = word_idx['<pad>']\n",
+    "    test_accuracy = []\n",
     "    for epoch in range(epochs):\n",
-    "        #scheduler.step()\n",
     "        epoch_loss = 0\n",
     "        optimizer.zero_grad()\n",
     "        outputs, relevance = model(story, query, supporting)\n",
     "        loss = F.nll_loss(outputs, answers.view(-1), ignore_index=pad, reduction='sum') +\\\n",
     "                mutli_target_nll_loss(supporting, relevance)\n",
-    "#         print(F.nll_loss(outputs, answers.view(-1), ignore_index=pad, reduction='sum'))\n",
-    "#         print(mutli_target_nll_loss(supporting, relevance))\n",
+    "\n",
     "        loss.backward(retain_graph=True)\n",
     "        optimizer.step()\n",
-    "        if epoch%5==0:\n",
-    "            eval(model, story, query, supporting, answers)\n",
-    "        print(f\"Epoch {epoch+1}: {loss.item()/story.shape[0]}\")\n",
+    "        if (epoch+1)%10==0:\n",
+    "            test_accuracy.append(eval(model, torch.Tensor(test[0]).long(), torch.Tensor(test[1]).long(), \n",
+    "      torch.Tensor(test[3]).long(), torch.Tensor(np.argmax(test[2], axis=1)).long()))\n",
+    "#             print(f\"Epoch {epoch+1}: {loss.item()/story.shape[0]}\")\n",
+    "    return max(test_accuracy)\n",
     "     \n",
     "def eval(model, story, query, supporting, answers):\n",
     "    with torch.no_grad():\n",
@@ -370,22 +358,20 @@
     "        s = np.where(relevance>0.5, 1, 0)\n",
     "        for i, val in enumerate(s):\n",
     "            if sum(val)==0:\n",
-    "                third_val = sorted(relevance[i,:], reverse=True)[3]\n",
+    "                third_val = sorted(relevance[i,:], reverse=True)[1]\n",
     "                s[i,:] = np.where(relevance[i,:]>third_val, 1, 0)\n",
     "        \n",
     "        binary_s = torch.Tensor(s).long()\n",
     "        outputs, _ = model(story, query, binary_s)\n",
     "        \n",
-    "#         ans = np.argmax(answers, axis=1)\n",
     "        predicted_ans = (np.argmax(outputs.detach().numpy(), axis=1))\n",
-    "#         print(predicted_ans)\n",
-    "#         print(answers)\n",
-    "        print(f\"test accuracy: {np.mean(predicted_ans == answers.numpy())}\")"
+    "\n",
+    "        return (np.mean(predicted_ans == answers.numpy()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -400,111 +386,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test accuracy: 0.10925\n",
-      "Epoch 1: 12.120236328125\n",
-      "Epoch 2: 13.6616494140625\n",
-      "Epoch 3: 21.87064453125\n",
-      "Epoch 4: 12.9696728515625\n",
-      "Epoch 5: 14.248076171875\n",
-      "test accuracy: 0.29075\n",
-      "Epoch 6: 10.3891533203125\n",
-      "Epoch 7: 9.7696201171875\n",
-      "Epoch 8: 8.95551953125\n",
-      "Epoch 9: 8.9431220703125\n",
-      "Epoch 10: 9.15401171875\n",
-      "test accuracy: 0.2715\n",
-      "Epoch 11: 8.95028125\n",
-      "Epoch 12: 8.74775390625\n",
-      "Epoch 13: 8.8492236328125\n",
-      "Epoch 14: 8.752359375\n",
-      "Epoch 15: 8.5243388671875\n",
-      "test accuracy: 0.29775\n",
-      "Epoch 16: 8.4611298828125\n",
-      "Epoch 17: 8.42096875\n",
-      "Epoch 18: 8.28250390625\n",
-      "Epoch 19: 8.08012158203125\n",
-      "Epoch 20: 7.91369970703125\n",
-      "test accuracy: 0.384\n",
-      "Epoch 21: 7.8010400390625\n",
-      "Epoch 22: 7.643806640625\n",
-      "Epoch 23: 7.47537255859375\n",
-      "Epoch 24: 7.38053857421875\n",
-      "Epoch 25: 7.27842333984375\n",
-      "test accuracy: 0.409\n",
-      "Epoch 26: 7.11930908203125\n",
-      "Epoch 27: 6.9864765625\n",
-      "Epoch 28: 6.92313818359375\n",
-      "Epoch 29: 6.822244140625\n",
-      "Epoch 30: 6.7232275390625\n",
-      "test accuracy: 0.3955\n",
-      "Epoch 31: 6.681439453125\n",
-      "Epoch 32: 6.6542607421875\n",
-      "Epoch 33: 6.61216943359375\n",
-      "Epoch 34: 6.5752060546875\n",
-      "Epoch 35: 6.546888671875\n",
-      "test accuracy: 0.3975\n",
-      "Epoch 36: 6.49006787109375\n",
-      "Epoch 37: 6.4094423828125\n",
-      "Epoch 38: 6.3472763671875\n",
-      "Epoch 39: 6.3016533203125\n",
-      "Epoch 40: 6.25964892578125\n",
-      "test accuracy: 0.38825\n",
-      "Epoch 41: 6.2228994140625\n",
-      "Epoch 42: 6.1879482421875\n",
-      "Epoch 43: 6.14517138671875\n",
-      "Epoch 44: 6.10419140625\n",
-      "Epoch 45: 6.07491162109375\n",
-      "test accuracy: 0.40425\n",
-      "Epoch 46: 6.04376318359375\n",
-      "Epoch 47: 6.0117607421875\n",
-      "Epoch 48: 5.98103564453125\n",
-      "Epoch 49: 5.9437119140625\n",
-      "Epoch 50: 5.9112373046875\n",
-      "test accuracy: 0.41225\n",
-      "Epoch 51: 5.8844072265625\n",
-      "Epoch 52: 5.85577294921875\n",
-      "Epoch 53: 5.83217236328125\n",
-      "Epoch 54: 5.80825732421875\n",
-      "Epoch 55: 5.7825068359375\n",
-      "test accuracy: 0.41425\n",
-      "Epoch 56: 5.7602734375\n",
-      "Epoch 57: 5.7351630859375\n",
-      "Epoch 58: 5.71225439453125\n",
-      "Epoch 59: 5.689775390625\n",
-      "Epoch 60: 5.6664609375\n",
-      "test accuracy: 0.407\n",
-      "Epoch 61: 5.6449326171875\n",
-      "Epoch 62: 5.621865234375\n",
-      "Epoch 63: 5.60120654296875\n",
-      "Epoch 64: 5.581001953125\n",
-      "Epoch 65: 5.5617568359375\n",
-      "test accuracy: 0.41875\n",
-      "Epoch 66: 5.542361328125\n",
-      "Epoch 67: 5.522017578125\n",
-      "Epoch 68: 5.50335791015625\n",
-      "Epoch 69: 5.48513525390625\n",
-      "Epoch 70: 5.46771630859375\n",
-      "test accuracy: 0.4135\n",
-      "Epoch 71: 5.44978076171875\n",
-      "Epoch 72: 5.4330400390625\n",
-      "Epoch 73: 5.4164716796875\n",
-      "Epoch 74: 5.39964892578125\n",
-      "Epoch 75: 5.3842265625\n",
-      "test accuracy: 0.4085\n",
-      "Epoch 76: 5.367638671875\n",
-      "Epoch 77: 5.35303955078125\n",
-      "Epoch 78: 5.33754296875\n",
-      "Epoch 79: 5.323193359375\n",
-      "Epoch 80: 5.308302734375\n"
+      "Task 1: 24.4%\n",
+      "Task 2: 44.7%\n",
+      "Task 3: 44.8%\n",
+      "Task 4: 27.5%\n",
+      "Task 5: 47.1%\n",
+      "Task 6: 51.7%\n",
+      "Task 7: 53.8%\n",
+      "Task 8: 38.9%\n",
+      "Task 9: 63.4%\n",
+      "Task 10: 82.2%\n",
+      "Task 11: 20.1%\n",
+      "Task 12: 16.5%\n",
+      "Task 13: 33.7%\n",
+      "Task 14: 21.9%\n",
+      "Task 15: 34.12%\n",
+      "Task 16: 36.0%\n",
+      "Task 17: 53.44%\n",
+      "Task 18: 88.95%\n",
+      "Task 19: 10.5%\n",
+      "Task 20: 75.42%\n"
      ]
     }
    ],
    "source": [
-    "mem = LSTM_with_attention(len(vocab), 10, 2, 5, 2)\n",
-    "optimizer = torch.optim.Adam(mem.parameters(), 0.1)\n",
-    "train(mem, optimizer, 80, torch.Tensor(inputs_train).long(), torch.Tensor(queries_train).long(), \n",
-    "      torch.Tensor(supporting_train).long(), torch.Tensor(np.argmax(answers_train, axis=1)).long())\n",
-    "\n"
+    "for task in range(1,21):\n",
+    "    train, test, vocab, max_story_count, max_story_len, query_maxlen, word_idx = preprocess_data(task)\n",
+    "\n",
+    "    mem = LSTM_with_attention(len(vocab), 10, 5, 4, 2, max_story_count, query_maxlen, max_story_len)\n",
+    "    optimizer = torch.optim.Adam(mem.parameters(), 0.1)\n",
+    "    test_accuracy = train_model(mem, optimizer, 100, torch.Tensor(train[0]).long(), torch.Tensor(train[1]).long(), \n",
+    "          torch.Tensor(train[3]).long(), torch.Tensor(np.argmax(train[2], axis=1)).long(), test)\n",
+    "    print(f\"Task {task}: {np.round(test_accuracy*100,2)}%\")"
    ]
   },
   {
