--- a/MemN2N.ipynb
+++ b/MemN2N.ipynb
@@ -46,6 +46,9 @@
    "outputs": [],
    "source": [
     "def print_story(stories):\n",
+    "    \"\"\"\n",
+    "    function to print stories from padded sequence\n",
+    "    \"\"\"\n",
     "    for s in stories:\n",
     "        if sum(s)>0:\n",
     "            print(' '.join([vocab.itos[i] for i in s]))"
@@ -111,8 +114,10 @@
     "\n",
     "        # create parameters according to different type of weight tying\n",
     "        pad = self.vocab.stoi['<pad>']\n",
+    "        # First embedding for stories\n",
     "        self.A = nn.ModuleList([nn.Embedding(self.input_size, self.embed_size, padding_idx=pad)])\n",
     "        self.A[-1].weight.data.normal_(0, 0.1)\n",
+    "        # Second embedding for stories\n",
     "        self.C = nn.ModuleList([nn.Embedding(self.input_size, self.embed_size, padding_idx=pad)])\n",
     "        self.C[-1].weight.data.normal_(0, 0.1)\n",
     "        if self.use_lw:\n",
@@ -150,7 +155,7 @@
     "            output = (self.C[i](story.view(-1, sen_size)) * weights).sum(1).view(\n",
     "                *story.shape[:-1], -1)\n",
     "            output += self.TC\n",
-    "            probs = (memory @ state.unsqueeze(-1)).squeeze()\n",
+    "            probs = (memory @ state.unsqueeze(-1)).squeeze() # attention scores\n",
     "            if not self.use_ls:\n",
     "                probs = F.softmax(probs, dim=-1)\n",
     "            response = (probs.unsqueeze(1) @ output).squeeze()\n",
@@ -162,6 +167,7 @@
     "        return F.log_softmax(F.linear(state, self.out), dim=-1)\n",
     "\n",
     "    def compute_weights(self, J):\n",
+    "        # position encoding\n",
     "        d = self.embed_size\n",
     "        if self.use_bow:\n",
     "            weights = torch.ones(J, d)\n",
@@ -262,10 +268,7 @@
     "            loss.backward()\n",
     "            nn.utils.clip_grad_norm_(model.parameters(), max_clip)\n",
     "            optimizer.step()\n",
-    "            epoch_loss += loss.item()\n",
-    "#         print(f\"Loss for epoch {epoch}: {epoch_loss/training_data_size}\")\n",
-    "\n",
-    "            \n"
+    "            epoch_loss += loss.item()"
    ]
   },
   {
@@ -445,66 +448,6 @@
     "        print(f\"Test Accuracy for Task {task}: {np.mean(acc)*100}%\")\n",
     "    np.mean(acc)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 318,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#! average error:  94.3\n"
-     ]
-    }
-   ],
-   "source": [
-    "params = {'embed_size' : 30,\n",
-    "          'memory_size' : 50,\n",
-    "          'num_hops' : 4,\n",
-    "          'use_bow' : False,\n",
-    "          'use_lw' : True,\n",
-    "          'use_ls' : False}\n",
-    "\n",
-    "train_iter, valid_iter, test_iter, vocab = dataloader(64, 50, 1 , True, False)\n",
-    "model = MemN2N(params, vocab)\n",
-    "optimizer = optim.Adam(model.parameters(), 0.05)\n",
-    "train(train_iter, model, optimizer, 100, 40)\n",
-    "eval(test_iter, model)\n",
-    "\n",
-    "# for task in range(1,21):\n",
-    "#     train_iter, valid_iter, test_iter, vocab = dataloader(64, 50, task , False, True)\n",
-    "#     acc = []\n",
-    "#     for _, batch in enumerate(test_iter, start=1):\n",
-    "#         with torch.no_grad():\n",
-    "#             story = batch.story\n",
-    "#             query = batch.query\n",
-    "#             answer = batch.answer\n",
-    "#             outputs = model(story, query)\n",
-    "#             o = np.argmax(outputs, axis=1)\n",
-    "#             acc += (list(np.array(answer.reshape(-1,)==o)))\n",
-    "#     print(f\"Test Accuracy for Task {task}: {np.mean(acc)*100}%\")\n",
-    "#     np.mean(acc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 305,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 305,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
