--- a/lstm.ipynb
+++ b/lstm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,109 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def tokenize(sent):\n",
-    "    return [ x.strip() for x in re.split(r'(\\W+)', sent) if x.strip()]\n",
-    "\n",
-    "def parse_stories(lines):\n",
-    "    data = []\n",
-    "    story = []\n",
-    "    for line in lines:\n",
-    "        #line = line.decode('utf-8').strip()\n",
-    "        nid, line = line.split(' ', 1)\n",
-    "        nid = int(nid)\n",
-    "        if nid == 1:\n",
-    "            # reset story when line ID=1 (start of new story)\n",
-    "            story = []\n",
-    "        if '\\t' in line:\n",
-    "            # this line is tab separated Q, A &amp;amp;amp;amp;amp; support fact ID\n",
-    "            q, a, supporting = line.split('\\t')\n",
-    "            # tokenize the words of question\n",
-    "            q = tokenize(q)\n",
-    "            # Provide all the sub-stories till this question\n",
-    "            substory = [x for x in story if x]\n",
-    "            # A story ends and is appended to global story data-set\n",
-    "            data.append((substory, q, a))\n",
-    "            story.append('')\n",
-    "        else:\n",
-    "            # this line is a sentence of story\n",
-    "            sent = tokenize(line)\n",
-    "            story.append(sent)\n",
-    "    return data\n",
-    "\n",
-    "def get_stories(f):\n",
-    "    # read the data file and parse 10k stories\n",
-    "    data = parse_stories(f.readlines())\n",
-    "    # lambda func to flatten the list of sentences into one list\n",
-    "    flatten = lambda data: reduce(lambda x, y: x + y, data)\n",
-    "    # creating list of tuples for each story\n",
-    "    data = [(flatten(story), q, answer) for story, q, answer in data]\n",
-    "    #data = [((story), q, answer) for story, q, answer in data]\n",
-    "    return data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def padding_tensor(sequences, max_len):\n",
-    "    \"\"\"\n",
-    "    :param sequences: list of tensors\n",
-    "    :return:\n",
-    "    \"\"\"\n",
-    "    num = len(sequences)\n",
-    "#     max_len = max([len(s) for s in sequences])\n",
-    "    out_dims = (num, max_len)\n",
-    "    out_tensor = np.zeros((num, max_len))\n",
-    "    for i, tensor in enumerate(sequences):\n",
-    "        length = len(tensor)\n",
-    "        out_tensor[i, :length] = tensor\n",
-    "    return out_tensor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def vectorize_stories(data, word_idx, story_maxlen, query_maxlen):\n",
-    "    # story vector initialization\n",
-    "    X = []\n",
-    "    # query vector initialization\n",
-    "    Xq = []\n",
-    "    # answer vector intialization\n",
-    "    Y = []\n",
-    "    for story, query, answer in data:\n",
-    "        # creating list of story word indices\n",
-    "        x = [word_idx[w] for w in story]\n",
-    "        # creating list of query word indices\n",
-    "        xq = [word_idx[w] for w in query]\n",
-    "        # let's not forget that index 0 is reserved\n",
-    "        y = np.zeros(len(word_idx))\n",
-    "        # creating label 1 for the answer word index\n",
-    "        y[word_idx[answer]] = 1\n",
-    "        X.append(x)\n",
-    "        Xq.append(xq)\n",
-    "        Y.append(y)\n",
-    "    return (padding_tensor(X, story_maxlen),\n",
-    "            padding_tensor(Xq, query_maxlen), np.array(Y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def prepare_data(task):\n",
     "    with open(f'./tasks/task_{task}.txt') as f:\n",
-    "        all_stories = get_stories(f)\n",
+    "        all_stories = get_stories(f, flatten=True)\n",
     "\n",
     "    train_stories, test_stories = train_test_split(all_stories, test_size=0.2)\n",
     "\n",
@@ -187,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,9 +106,12 @@
     "        self.query_hidden_dim = query_hidden_dim\n",
     "        self.story_embeddings = nn.Embedding(vocab_size, story_embed_size)\n",
     "        self.query_embeddings = nn.Embedding(vocab_size, query_embed_size)\n",
+    "        # two lstm modules for story and query\n",
     "        self.story_lstm = nn.LSTM(story_embed_size, story_hidden_dim)\n",
     "        self.query_lstm = nn.LSTM(query_embed_size, query_hidden_dim)\n",
+    "        #linear layer to convert to vocab size\n",
     "        self.hidden2label = nn.Linear(story_hidden_dim*story_maxlen+query_hidden_dim*query_maxlen, vocab_size)\n",
+    "        #hidden layer initilaization for both the lstms\n",
     "        self.story_hidden = self.init_story_hidden(story_maxlen)  \n",
     "        self.query_hidden = self.init_query_hidden(query_maxlen)  \n",
     "        \n",
@@ -238,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -281,30 +188,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Task 1: 39.7%\n",
-      "Task 2: 43.5%\n",
-      "Task 3: 48.4%\n",
-      "Task 4: 61.5%\n",
-      "Task 5: 36.6%\n",
-      "Task 6: 51.9%\n",
-      "Task 7: 58.9%\n",
-      "Task 8: 60.5%\n",
-      "Task 9: 62.5%\n",
-      "Task 10: 82.7%\n",
-      "Task 11: 73.8%\n",
-      "Task 12: 54.1%\n",
-      "Task 13: 78.3%\n",
-      "Task 14: 32.6%\n",
-      "Task 15: 48.0%\n",
-      "Task 16: 37.5%\n",
-      "Task 17: 52.06%\n",
-      "Task 18: 89.15%\n",
-      "Task 19: 16.5%\n"
+      "Task 20: 81.38%\n"
      ]
     }
    ],
    "source": [
-    "for task in range(1,21):\n",
+    "for task in range(20,21):\n",
     "    train, test, vocab, word_idx, query_maxlen, story_maxlen = prepare_data(task)\n",
     "    inputs_train = torch.Tensor(train[0]).long()\n",
     "    queries_train = torch.Tensor(train[1]).long()\n",
@@ -313,9 +202,15 @@
     "    mem = LSTM_no_attention(len(vocab), 20, 10, 5, 2, query_maxlen, story_maxlen)\n",
     "    optimizer = torch.optim.Adam(mem.parameters(), 0.1)\n",
     "    test_accuracy = train_model(mem, optimizer, 100, inputs_train, queries_train, answers_train, test, word_idx)\n",
-    "    print(f\"Task {task}: {np.round(test_accuracy*100,2)}%\")\n",
-    "\n"
+    "    print(f\"Task {task}: {np.round(test_accuracy*100,2)}%\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
